fix footer text align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,10 +13,10 @@ font-size:42px;
 font-weight: 300;
 }
 p {
-  font-size:21;
+  font-size:21px;
   color:gray;
 }
-#footer {
+p, #footer {
   text-align: right;
 }
 #comingsoon {
